# HoMMybeer-3

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-and-run-demo.sh  build-and-run-game.sh  do-instalacji.md  plan_monitorowanie.xlsx
app/: main.cc  town.cc
assets/: BattlegroundMetadata.json  ObjectsMetadata.json  UnitConfig.json
cmake/: FetchGitLib.cmake
lib/nlohmann/: json.hpp
metadata/: BattlegroundMetadata.json  ObjectsMetadata.json  TownsMetadata.json
scripts/: install-requirements-scoop.ps1  install-requirements.sh
src/: CMakeLists.txt
src/game_engine/: BattleWindowController.cc  BattleWindowController.h  CMakeLists.txt  Controller.h  EventHandler.cc  EventHandler.h  MainWindowController.cc  MainWindowController.h  MapWindowController.cc  MapWindowController.h  TownWindowController.cc  TownWindowController.h
src/game_engine/controllers/: BattleWindowController.cc  BattleWindowController.h  CMakeLists.txt  Controller.h  EventHandler.cc  EventHandler.h  MainWindowController.cc  MainWindowController.h  MapWindowController.cc  MapWindowController.h  TownWindowController.cc  TownWindowController.h
src/game_engine/views/: BattleUnitsView.cc  BattleUnitsView.h  BattlegroundView.cc  BattlegroundView.h  BorderView.cc  BorderView.h  CMakeLists.txt  ControlsView.cc  ControlsView.h  HeroView.cc  HeroView.h  HexGridView.cc  HexGridView.h  MainView.h  MapView.cc  MapView.h  ObjectsView.cc  ObjectsView.h  PathView.cc  PathView.h  ResourcesView.cc  ResourcesView.h  TownView.cc  TownView.h
src/game_logic/: CMakeLists.txt  Config.cc  Config.h  Field.cc  Field.h  Game.cc  Game.h  Hero.cc  Hero.h  Map.cc  Map.h  MapObject.cc  MapObject.h  Player.cc  Player.h  Session.cc  Session.h  UnitBlock.hpp  UnitBlockGenerator.hpp  UnitConfig.h  common.cc  common.h  common.hpp  game_logic_utils.cc  game_logic_utils.h
src/game_logic/ai/: CMakeLists.txt  MiniMaxFighter.cc  MiniMaxFighter.h  combat_evaluation.cc  combat_evaluation.h
src/game_logic/combat/: BattleManager.cc  BattleManager.h  BattleState.cc  BattleState.h  Battleground.cc  Battleground.h  CMakeLists.txt  combat_common.cc  combat_common.h  combat_utils.cc  combat_utils.h  common.cc  common.h
src/game_logic/generators/: CMakeLists.txt  MapUtils.cc  MapUtils.h  map_generation.cc  map_generation.h
src/game_logic/units/: CMakeLists.txt  UnitBlock.cc  UnitBlock.hpp  UnitBlockGenerator.cc  UnitBlockGenerator.hpp  UnitConfig.cc  UnitConfig.h
src/welcome/: CMakeLists.txt  Welcome.cc  Welcome.h
tests/: CMakeLists.txt  main.cc  testUtils.cc  testUtils.h  test_game.cc  test_hero_movement.cc  test_map.cc  test_mapobject.cc  test_session.cc  test_unit_block.cc  test_unit_block_generator.cc  test_unit_config.cc  test_unit_config.json  test_unit_integration.cc
tests/combat/: CMakeLists.txt  test_battle_manager.cc  test_battleground.cc  test_battlestate.cc
